--- a/templates/error404.gohtml
+++ b/templates/error404.gohtml
@@ -1,6 +1,6 @@
 {{define "staticPath"}}http://localhost:8080/static{{end}}
 
-{{define "title"}}MangaThorg - Sorry{{.Title}}{{end}}
+{{define "title"}}MangaThorg - Sorry{{end}}
 
 {{define "cssFile"}}miscellaneous{{end}}
 
