--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -517,6 +517,7 @@ form.searchform {
     .advanced-search-header {
       display: flex;
       justify-content: flex-end;
+      align-items: flex-end;
       gap: calc(15px + .8vw);
 
       .expand-btn {
@@ -615,6 +616,26 @@ form.searchform {
   .expand {
     height: calc(710px + 3vw);
     overflow: hidden;
+  }
+}
+
+.message-ctn {
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+
+  .message {
+    margin-top: 7%;
+    width: fit-content;
+    font-family: "Tilt Neon", sans-serif;
+    font-weight: 400;
+    color: $red;
+    font-size: calc(14px + 1.2vw);
+    text-align: center;
+    letter-spacing: 0;
+    line-height: normal;
   }
 }
 
