--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -77,7 +77,7 @@ body {
   flex: 1 1 auto;
   width: 30%;
 }
-.header .main .header-search-bar-ctn form.header-search-bar {
+.header .main .header-search-bar-ctn .header-search-bar {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -87,8 +87,9 @@ body {
   width: 60%;
   min-width: 7rem;
   height: fit-content;
+  max-width: 400px;
 }
-.header .main .header-search-bar-ctn form.header-search-bar .filter-search-bar {
+.header .main .header-search-bar-ctn .header-search-bar .filter-search-bar {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -96,13 +97,8 @@ body {
   padding: calc(4px + 0.2vw);
   background-color: #393E46;
   border-radius: calc(5px + 0.3vw);
-  cursor: pointer;
-  transition: background-color 150ms ease-in;
 }
-.header .main .header-search-bar-ctn form.header-search-bar .filter-search-bar:hover {
-  background-color: #00ADB5;
-}
-.header .main .header-search-bar-ctn form.header-search-bar .filter-search-bar .filter-search-text {
+.header .main .header-search-bar-ctn .header-search-bar .filter-search-bar .filter-search-text {
   width: fit-content;
   font-family: "Tilt Neon", sans-serif;
   font-weight: 400;
@@ -113,24 +109,8 @@ body {
   line-height: normal;
   padding: 0 calc(2px + 0.2vw);
 }
-.header .main .header-search-bar-ctn form.header-search-bar .search-bar-input {
-  width: 60%;
-  flex-shrink: 1;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(10px + 0.5vw);
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-  padding: 0 calc(2px + 0.2vw);
-}
-.header .main .header-search-bar-ctn form.header-search-bar .search-bar-btn {
-  cursor: pointer;
-}
-.header .main .header-search-bar-ctn form.header-search-bar .search-bar-btn .icon-search {
+.header .main .header-search-bar-ctn .header-search-bar .icon-search {
   height: calc(18px + 0.6vw);
-  width: calc(18px + 0.6vw);
 }
 .header .variable {
   width: 89%;
@@ -361,153 +341,4 @@ body {
   background-position: 50% 50%;
 }
 
-h2.chapter-scan-manga-title,
-h3.chapter-scan-title {
-  width: 100%;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-h2.chapter-scan-manga-title {
-  font-size: calc(22px + 1.2vw);
-}
-
-h3.chapter-scan-title {
-  font-size: calc(20px + 1vw);
-}
-
-.chapter-scan-list {
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-  height: fit-content;
-}
-.chapter-scan-list img.chapter-scan {
-  object-fit: contain;
-}
-
-@media screen and (max-width: 1080px) {
-  .chapter-scan-list {
-    width: 80%;
-  }
-}
-@media screen and (max-width: 550px) {
-  .chapter-scan-list {
-    width: 100%;
-  }
-}
-.tags-title {
-  width: 90%;
-  height: fit-content;
-  margin-top: 3rem;
-}
-.tags-title .tags-title-text {
-  padding-left: 3rem;
-  width: fit-content;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(26px + 1vw);
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  width: 90%;
-  height: fit-content;
-}
-.tags .tag {
-  width: fit-content;
-  height: fit-content;
-  padding: calc(10px + 1vw) calc(20px + 1vw);
-  border-radius: calc(10px + 0.3vw);
-  background-color: #393E46;
-  transition: background-color ease-in-out 300ms;
-}
-.tags .tag .tag-name {
-  width: max-content;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(10px + 1vw);
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-.tags .tag:hover {
-  background-color: #00ADB5;
-}
-
-.ctn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 10px 30px;
-}
-.ctn .error-txt {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: 25%;
-}
-.ctn .error-txt .text-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.ctn .error-txt .text-container .text-wrapper {
-  width: max-content;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(24px + 3vw);
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-.ctn .error-txt .text-container .div {
-  width: fit-content;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(24px + 3vw);
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-.ctn .error-img {
-  width: 30vw;
-  height: 60vh;
-  box-shadow: inset 0px -12px 35px 25px #222831, inset 0px 0px 5px #222831;
-  background-size: contain;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
-.ctn .error-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  gap: 10px;
-  width: 35%;
-}
-.ctn .error-info p.p {
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(24px + 3vw);
-  text-align: left;
-  letter-spacing: 0;
-  line-height: calc(42px + 5vw);
-}
-
-/*# sourceMappingURL=miscellaneous.css.map */
+/*# sourceMappingURL=base.css.map */
