--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -268,6 +268,7 @@ a {
             background-color: $blue-elem;
           }
           .hover-description {
+            position: relative;
             display: flex;
             flex-direction: column;
             gap: 1.2rem;
@@ -277,6 +278,27 @@ a {
             z-index: 10;
             font-family: "Tilt Neon", sans-serif;
 
+            .favorite-btn {
+              position: absolute;
+              top: 3px;
+              right: 3px;
+            }
+            .add-favorite {
+                background-image: url("http://localhost:8080/static/img/darkred-add-favorite.png");
+                width: calc(6px + 1vw);
+                height: calc(6px + 1vw);
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+              }
+            .delete-favorite {
+                background-image: url("http://localhost:8080/static/img/darkred-remove-favorite.png");
+                width: calc(6px + 1vw);
+                height: calc(6px + 1vw);
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+              }
             .description-title {
               text-align: center;
               font-size: clamp(16px, calc(15px + .4vw), 3rem);
