--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -6,6 +6,8 @@
 
 {{define "page"}}
 
+  {{$isConnected := .IsConnected}}
+
   <!-- Banner element -->
 <div class="banner">
   <img class="background-img" src="/covers/{{.Banner.Id}}/{{.Banner.CoverImg}}.512.jpg" alt="{{.Banner.Title}}" />
@@ -37,6 +39,9 @@
           <div class="category-card-img" style="background-image: url('/covers/{{.Id}}/{{.CoverImg}}.256.jpg')"></div>
           <div class="category-card-hover"></div>
           <div class="hover-description">
+            {{if $isConnected}}
+              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
+            {{end}}
             <div class="description-title">Description</div>
             <div class="description-ctn">{{.Description}}</div>
 
@@ -47,7 +52,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
@@ -67,6 +72,9 @@
           <div class="category-card-img" style="background-image: url('/covers/{{.Id}}/{{.CoverImg}}.256.jpg')"></div>
           <div class="category-card-hover"></div>
           <div class="hover-description">
+            {{if $isConnected}}
+              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
+            {{end}}
             <div class="description-title">
               Description
             </div>
@@ -78,7 +86,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
@@ -87,4 +95,5 @@
     {{end}}
   </div>
 </div>
+  <script src="static/js/favorites.js"></script>
 {{end}}
