--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -7,8 +7,36 @@
 {{define "page"}}
 
     {{/*    User banner*/}}
+    <div class="variable">
+        <div class="profile-header">
+            <div class="filler"></div>
+            <a href="/home" class="username-ctn"><div class="username-txt">{{.Username}}</div></a>
+            <div class="filler"></div>
+            <a href="/home" class="profile-avatar"><img src="{{template "staticPath" .}}/img/{{.AvatarImg}}" alt="avatar-img" class="avatar-img"></a>
+        </div>
+        <a href="/logout" class="logout-btn"><span class="header-btn-text">Logout</span></a>
+    </div>
 
     {{/*        Best favorite manga banner*/}}
+    <div class="banner">
+        <img class="background-img" src="/covers/{{.Banner.Id}}/{{.Banner.CoverImg}}.512.jpg" alt="{{.Banner.Title}}" />
+        <div class="banner-text">
+            <div class="banner-title">{{.Banner.Title}}</div>
+            <div class="banner-description">
+                {{.Banner.Description}}
+            </div>
+            <div class="tags">
+                {{range .Banner.Tags}}
+                    <a href="/category/{{.Id}}" class="banner-tag"><div class="banner-tag-text">{{.Attributes.Name.En}}</div></a>
+                {{end}}
+            </div>
+            <div class="banner-buttons">
+                <a href="/chapter/{{.Banner.Id}}/1/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
+                <a href="/manga/{{.Banner.Id}}?order=desc&pag=1"><div class="info-btn"><div class="banner-btn-text">View Info</div></div></a>
+            </div>
+        </div>
+        <div class="banner-card"><img class="banner-cover" src="/covers/{{.Banner.Id}}/{{.Banner.CoverImg}}.512.jpg" alt="{{.Banner.Title}}" /></div>
+    </div>
 
 
     <div class="category">
