--- a/templates/search.gohtml
+++ b/templates/search.gohtml
@@ -117,8 +117,8 @@
                                 <div class="category-card-hover"></div>
                                 <div class="hover-description">
                                     {{if $isConnected}}
-                                    <div class="favorite-btn {{if .IsFavorite}}remove-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
-                                        {{end}}
+                                        <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
+                                    {{end}}
                                     <div class="description-title">
                                         Description
                                     </div>
@@ -131,7 +131,7 @@
                                     {{end}}
                                 </div>
                                 <div class="hover-buttons">
-                                    <a href="/chapter/{{.Id}}/1/{{.FirstChapterId}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+                                    <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
                                     <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
                                 </div>
                             </div>
@@ -159,6 +159,6 @@
     {{end}}
 
     <script src="{{.Path}}/js/search.js"></script>
-    <script src="{{.Path}}/js/favorites.js"></script>{{/*testing favorite handling*/}}
+    <script src="{{.Path}}/js/favorites.js"></script>
 
 {{end}}
